# anamnesis.ai

./: .editorconfig  .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  404.html  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml  main.yaml  release.yaml
changelog/: index.html
conda/: ci-macos.yaml  ci-windows.yaml  ci.yaml  dev.yaml  release.yaml
contributing/: index.html
docs/: changelog.md  contributing.md  example.ipynb  index.md  installation.md  mkdocs.yaml
docs/api/: references.md  references.rst
docs/background_info/: history.md  llama.md
docs/notebook/: rag-implementation-with-llama.ipynb
docs/tutorials/: llama.md
example/: ocr_anamnesis.py
installation/: index.html
notebook/fhir-resources-extraction-demo/: fhir-resources-extraction-demo.ipynb  index.html
notebook/rag-implementation-with-llama/: index.html
search/: search_index.json
src/anamnesisai/: __init__.py  anamnesisai.py  config.py  core.py  fhirdb.py  generation.py  openai.py  orm.py  resource_templates.json  supported_fhir.py  utils.py
src/anamnesisai/templates/: allergy.json  careplan.json  condition.json  diagnostic_report.json  encounter.json  medication_request.json  observation.json  patients.json  practitioner.json  procedure.json
tests/: __init__.py  conftest.py  test_anamnesisai.py  test_extract_fhir.py  test_extract_fhir_openai.py  test_orm.py  test_utils.py
tests/data/synthetic/: careplan01.txt  careplan02.txt  enhanced_conversation.txt  medicationrequest01.txt  medicationrequest02.txt  servicerequest01.txt  servicerequest02.txt
tests/data/transcripts/: CAR0001.txt  CAR0002.txt  CAR0003.txt  CAR0004.txt  CAR0005.txt  DER0001.txt  GAS0001.txt  GAS0002.txt  GAS0003.txt  GAS0004.txt  GAS0005.txt  GAS0007.txt  GEN0001.txt  MSK0001.txt  MSK0003.txt  MSK0004.txt  MSK0005.txt  MSK0006.txt  MSK0007.txt  MSK0008.txt  MSK0009.txt  MSK0010.txt  MSK0011.txt  MSK0012.txt  MSK0013.txt  MSK0014.txt  MSK0015.txt  MSK0016.txt  MSK0017.txt  MSK0018.txt  MSK0019.txt  MSK0020.txt  MSK0021.txt  MSK0022.txt  MSK0023.txt  MSK0024.txt  MSK0025.txt  MSK0026.txt  MSK0027.txt  MSK0028.txt  (+232 more)
tutorials/llama/: index.html
